<resources>
    <string name="app_name">Html</string>
    <string name="chapter1">1.Введение в HTML</string>
    <string name="chapter2">2.Работа с текстом и ссылками</string>
    <string name="chapter3">3.Изображения и мультимедиа</string>
    <string name="chapter4">4.Таблицы и списки</string>
    <string name="chapter5">5.Формы и взаимодействие с пользователем</string>
    <string name="chapter2_logo">text</string>
    <string name="chater3_logo">img</string>
    <string name="chater4_logo">table</string>
    <string name="content">Содержание:</string>
    <string name="html_index">
        - Что такое HTML и для чего он нужен\n
        - Структура HTML-документа: <font color="#6A5ACD">&lt;!DOCTYPE html&gt;</font>, <font color="#4682B4">&lt;html&gt;</font>, <font color="#556B2F">&lt;head&gt;</font>, <font color="#6A5ACD">&lt;body&gt;</font> \n
        - Основные теги: <font color="#4682B4">&lt;h1&gt;</font>, <font color="#556B2F">&lt;p&gt;</font>, <font color="#6A5ACD">&lt;a&gt;</font>, <font color="#4682B4">&lt;img&gt;</font>, <font color="#556B2F">&lt;ul&gt;</font>, <font color="#6A5ACD">&lt;li&gt;</font>\n
        - Структура HTML кода
    </string>
    <string name="html_is">
        • <font color="#6A5ACD">Html</font> - один из главных инструментов для верстки сайтов
    </string>
    <string name="html_layout">
        • <font color="#4682B4">Верстка сайтов</font> - написание визуальной части сайта, то есть добавление текста, иконок, кнопок
    </string>
    <string name="html_str">
        • <font color="#6A5ACD">&lt;!DOCTYPE html&gt;</font> — эта строка, которая сообщает браузеру, что документ написан на языке <font color="#4682B4">HTML5</font>, самой новой и современной версии <font color="#6A5ACD">HTML</font>. Этот тег обязателен в начале каждого HTML-документа, чтобы браузер правильно понимал и отображал содержимое страницы. Хотя этот тег не является HTML-элементом, он играет важную роль в определении режима работы браузера.\n\n
        • <font color="#556B2F">&lt;html&gt;</font> - корневой тег, внутри которого находятся все остальные теги.\n\n
        • <font color="#4682B4">&lt;head&gt;</font> - тег для хранения мета информации и ссылок на стили или скрипты.\n\n
        • <font color="#6A5ACD">&lt;body&gt;</font> - В этом теге находится весь видимый контент веб-страницы: текст, изображения, ссылки и другие элементы.
    </string>
    <string name="html_teg">
        Основные теги: <font color="#556B2F">&lt;h1&gt;</font>, <font color="#4682B4">&lt;p&gt;</font>, <font color="#6A5ACD">&lt;a&gt;</font>, <font color="#556B2F">&lt;img&gt;</font>, <font color="#4682B4">&lt;ul&gt;</font>, <font color="#6A5ACD">&lt;li&gt;</font>
    </string>
    <string name="html_tegs">
        -<font color="#556B2F">h1</font> - Главный заголовок текста\n
        -<font color="#4682B4">p</font> - Параграф, нужен для добавления большого блока текста\n
        -<font color="#6A5ACD">a</font> - Внутри тега можно добавлять элемент на веб-странице, который позволяет пользователю перейти на другую веб-страницу (работает как для внутренних ссылок, так и для внешних)\n
        -<font color="#556B2F">img</font> - Чтобы вставлять изображения на веб-сайт\n
        -<font color="#4682B4">title</font> - заголовок (название) веб-сайта
    </string>
    <string name="html_str2">
        - Структура <font color="#6A5ACD">html</font> кода:
    </string>
    <string name="html_final">
        • <font color="#6A5ACD">&lt;!DOCTYPE html&gt;</font> — эта строка сообщает браузеру, что документ написан на языке <font color="#4682B4">HTML5</font>, самой новой и современной версии <font color="#6A5ACD">HTML</font>. Этот тег обязателен в начале каждого HTML-документа, чтобы браузер правильно понимал и отображал содержимое страницы. Хотя этот тег не является HTML-элементом, он играет важную роль в определении режима работы браузера.\n\n
        • <font color="#556B2F">&lt;html&gt;</font> — корневой тег, внутри которого находятся все остальные теги.\n\n
        • <font color="#4682B4">&lt;head&gt;</font> — тег для хранения мета-информации и ссылок на стили или скрипты.\n\n
        • <font color="#6A5ACD">&lt;body&gt;</font> — В этом теге находится весь видимый контент веб-страницы: текст, изображения, ссылки и другие элементы.\n\n
        • <font color="#556B2F">&lt;title&gt;</font> — тег, в котором указывается заголовок страницы, отображаемый на вкладке браузера или в результатах поиска.\n\n
        • <font color="#4682B4">&lt;meta&gt;</font> — тег для хранения мета-информации, такой как описание страницы, ключевые слова и другие данные, которые не отображаются пользователю напрямую.\n\n
        • <font color="#6A5ACD">&lt;link&gt;</font> — тег для подключения внешних ресурсов, например, CSS-файлов, используемых для стилизации страницы.\n\n
        • <font color="#556B2F">&lt;script&gt;</font> — тег, используемый для подключения и выполнения JavaScript-кода на странице.\n\n
        • <font color="#4682B4">&lt;h1&gt; - &lt;h6&gt;</font> — теги заголовков, от самого большого и важного (<font color="#6A5ACD">&lt;h1&gt;</font>) до менее значимых (<font color="#556B2F">&lt;h6&gt;</font>).\n\n
        • <font color="#4682B4">&lt;p&gt;</font> — тег абзаца, используемый для форматирования текста на странице.\n\n
        • <font color="#6A5ACD">&lt;a&gt;</font> — тег ссылки, который позволяет пользователю переходить на другие страницы или ресурсы.\n\n
        • <font color="#556B2F">&lt;img&gt;</font> — тег для отображения изображений на веб-странице.
    </string>
    <string name="html_index2">
        <font color="#556B2F">1.</font> <font color="#6A5ACD">Введение в работу с текстом</font>\n
        <font color="#4682B4">2.</font> <font color="#6A5ACD">Работа с ссылками</font>
    </string>
    <string name="html_atrributs">
        <font color="#4682B4">Атрибуты HTML</font> — это специальные слова, внутри начального тега для управления представления элемента или форматирования текста
    </string>
    <string name="table">
        <font color="#4682B4">1. Таблицы </font>
    </string>
    <string name="html_table">
        <font color="#4682B4">table </font>— один из основных элементов  <font color="#C3693C">HTML </font> , который  используют для отображения данных (текста, изображения или другого  элемента) в ячейках на странице. Таблица состоит из строк и столбцов.\n
        • &lt;table&gt;— определяет начало и конец таблицы. Всё содержимое таблицы должно находиться между &lt;table&gt; &lt;/table&gt;
    </string>
    <string name="exemple_table1">
        <font color="#C3693C"> &lt; table &gt; </font> \n
        <font color="#EC4DE0"> \ \ \ &lt; !--  здесь будут ячейки таблицы  --&gt; \n</font>
        <font color="#C3693C"> &lt; /table &gt;</font>
    </string>
    <string name="html_thead">
        • <font color="#4682B4"> &lt;thead&gt;</font>— определяет заголовок таблицы. Заголовок может содержать одну или несколько строк, в которых могут использоваться теги &lt; th&gt; для определения заголовков столбцов.
    </string>
    <string name="exemple_table2">
        <font color="#C3693C"> &lt; table &gt; </font> \n
        <font color="#569CD6"> \ \ \ \ &lt; thead &gt; </font> \n
        <font color="#EC4DE0"> \ \ \ \ \ \ \ \ \&lt; !--  здесь будут ячейки таблицы  --&gt; \n</font>
        <font color="#569CD6"> \ \ \ \ &lt;  /thead &gt; </font> \n
        <font color="#C3693C"> &lt; /table &gt;</font>
    </string>
    <string name="html_tr">
        • &lt; <font color="#4682B4">tr</font>&gt; — определяет строку таблицы. Каждая строка должна находиться между тегами &lt;<font color="#C3693C"> tbody </font> &gt;, &lt;<font color="#C3693C"> thead&gt; </font> или &lt; <font color="#C3693C"> tfoot </font>&gt;.\n
        • &lt; <font color="#4682B4">th&gt;</font> — определяет заголовок столбца или строки таблицы. Используется внутри тегов &lt; <font color="#C3693C">thead</font>&gt; и &lt;<font color="#C3693C">tr</font>&gt;
    </string>
    <string name="exemple_table3">
        <font color="#C3693C"> &lt; table &gt; </font> \n
        <font color="#569CD6"> \ \ \ \ &lt; thead &gt; </font> \n
        <font color="#94D6BD"> \ \ \ \ \ \ \ \ &lt; tr&gt;</font>\n
        <font color="#94D6BD"> \ \ \ \ \ \ \ \ \ \ \ \ \ &lt; th&gt; </font> <font color="#FFFFFF">Заголовок 1 </font> <font color="#94D6BD"> &lt; /th&gt; </font>\n
        <font color="#94D6BD"> \ \ \ \ \ \ \ \ \ \ \ \ \ &lt; th&gt; </font> <font color="#FFFFFF">Заголовок 2 </font> <font color="#94D6BD"> &lt; /th&gt; </font>\n
        <font color="#94D6BD"> \ \ \ \ \ \ \ \ &lt; /tr&gt;</font>\n
        <font color="#569CD6"> \ \ \ \ &lt;  /thead &gt; </font> \n
        <font color="#C3693C"> &lt; /table &gt;</font>
    </string>
    <string name="html_tbody">
        &lt; <font color="#4682B4">tbody</font>&gt; — определяет тело таблицы. Тело содержит одну или несколько строк, в которых могут использоваться теги <font color="#C3693C">&lt; </font><font color="#C3693C">td</font>&gt; для определения содержимого ячеек.
    </string>
    <string name="exemple_table4">
        <font color="#C3693C"> &lt; table &gt; </font> \n
        <font color="#569CD6"> \ \ \ \ &lt; thead &gt; </font> \n
        <font color="#94D6BD"> \ \ \ \ \ \ \ \ &lt; tr&gt;</font>\n
       <font color="#94D6BD"> \ \ \ \ \ \ \ \ \ \ \ \ \ &lt; th&gt; </font> <font color="#FFFFFF">Заголовок 1 </font> <font color="#94D6BD"> &lt; /th&gt; </font>\n
        <font color="#94D6BD"> \ \ \ \ \ \ \ \ \ \ \ \ \ &lt; th&gt; </font> <font color="#FFFFFF">Заголовок 2 </font> <font color="#94D6BD"> &lt; /th&gt; </font>\n
        <font color="#94D6BD"> \ \ \ \ \ \ \ \ &lt; /tr&gt;</font>\n
        <font color="#569CD6"> \ \ \ \ &lt;  /thead &gt; </font> \n
        <font color="#569CD6"> \ \ \ \ &lt; tbody &gt; </font> \n
        <font color="#94D6BD"> \ \ \ \ \ \ \ \ &lt; tr&gt;</font>\n
        <font color="#94D6BD"> \ \ \ \ \ \ \ \ &lt; /tr&gt;</font>\n
        <font color="#569CD6"> \ \ \ \ &lt; /tbody &gt; </font> \n
        <font color="#C3693C"> &lt; /table &gt;</font>
    </string>
    <string name="html_td">
        &lt;<font color="#4682B4">td</font> &gt;— определяет содержимое ячейки таблицы. Используется внутри тегов &lt;<font color="#C3693C">tbody</font>&gt;, &lt;<font color="#C3693C">tfoot</font>&gt; и &lt;<font color="#C3693C">tr</font>&gt;.
    </string>
    <string name="exemple_table5">
        <font color="#C3693C"> &lt; table &gt; </font> \n
        <font color="#569CD6"> \ \ \ \ &lt; thead &gt; </font> \n
        <font color="#94D6BD"> \ \ \ \ \ \ \ \ &lt; tr&gt;</font>\n
        <font color="#94D6BD"> \ \ \ \ \ \ \ \ \ \ \ \ \ &lt; th&gt; </font> <font color="#FFFFFF">Заголовок 1 </font> <font color="#94D6BD"> &lt; /th&gt; </font>\n
        <font color="#94D6BD"> \ \ \ \ \ \ \ \ \ \ \ \ \ &lt; th&gt; </font> <font color="#FFFFFF">Заголовок 2 </font> <font color="#94D6BD"> &lt; /th&gt; </font>\n
        <font color="#94D6BD"> \ \ \ \ \ \ \ \ &lt; /tr&gt;</font>\n
        <font color="#569CD6"> \ \ \ \ &lt;  /thead &gt; </font> \n
        <font color="#569CD6"> \ \ \ \ &lt; tbody &gt; </font> \n
        <font color="#94D6BD"> \ \ \ \ \ \ \ \ &lt; tr&gt;</font>\n
        <font color="#94D6BD"> \ \ \ \ \ \ \ \ \ \ \ \ \ &lt; td&gt; </font> <font color="#FFFFFF">Ячейка 1,1</font> <font color="#94D6BD">&lt; /td&gt;</font>  \n
        <font color="#94D6BD"> \ \ \ \ \ \ \ \ \ \ \ \ \ &lt; td&gt;</font> <font color="#FFFFFF"> Ячейка 1,2 </font> <font color="#94D6BD">&lt; /td&gt;</font> \n
        <font color="#94D6BD"> \ \ \ \ \ \ \ \ &lt; /tr&gt;</font>\n
        <font color="#569CD6"> \ \ \ \ &lt; /tbody &gt; </font> \n
        <font color="#C3693C"> &lt; /table &gt;</font>
    </string>
    <string name="html_caption">
        &lt; <font color="#4682B4">caption </font> &gt;— определяет заголовок таблицы, который будет размещен над таблицей. Используется внутри тега &lt;<font color="#C3693C">table</font>&gt;.
    </string>
</resources>