<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Chapter4">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/content"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="20dp"
                android:fontFamily="@font/mplcbold"
                android:text="@string/content"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/first"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="20dp"
                android:fontFamily="@font/mplcbold"
                android:text="1. Таблицы\n2. Списки"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/content" />

            <TextView
                android:id="@+id/second"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10sp"
                android:layout_marginEnd="20dp"
                android:fontFamily="@font/mplcbold"
                android:text="@string/table"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/first" />

            <TextView
                android:id="@+id/three"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="20dp"
                android:fontFamily="@font/mplcbold"
                android:text="@string/html_table"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/second" />

            <View
                android:id="@+id/four"
                android:layout_width="0dp"
                android:layout_height="100sp"
                android:background="@color/black_console"
                android:layout_marginStart="10dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/three"/>

            <TextView
                android:id="@+id/five"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/exemple_table1"
                android:textColor="@color/white"
                android:layout_marginStart="50dp"
                android:layout_marginTop="-85dp"
                android:layout_marginEnd="60sp"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/four"/>

            <TextView
                android:id="@+id/six"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="20dp"
                android:fontFamily="@font/mplcbold"
                android:text="@string/html_thead"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/five" />

            <View
                android:id="@+id/seven"
                android:layout_width="0dp"
                android:layout_height="120sp"
                android:background="@color/black_console"
                android:layout_marginStart="10dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/six"/>

            <TextView
                android:id="@+id/eight"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/exemple_table2"
                android:textColor="@color/white"
                android:layout_marginStart="50dp"
                android:layout_marginTop="-110dp"
                android:layout_marginEnd="30sp"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/seven"/>

            <TextView
                android:id="@+id/nine"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="20dp"
                android:fontFamily="@font/mplcbold"
                android:text="@string/html_tr"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/eight" />

            <View
                android:id="@+id/ten"
                android:layout_width="0dp"
                android:layout_height="190sp"
                android:background="@color/black_console"
                android:layout_marginStart="10dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/nine"/>

            <TextView
                android:id="@+id/eleven"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/exemple_table3"
                android:textColor="@color/white"
                android:layout_marginStart="50dp"
                android:layout_marginTop="-180dp"
                android:layout_marginEnd="30sp"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ten"/>

            <TextView
                android:id="@+id/twelve"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="20dp"
                android:fontFamily="@font/mplcbold"
                android:text="@string/html_tbody"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/eleven" />

            <View
                android:id="@+id/thirteen"
                android:layout_width="0dp"
                android:layout_height="250sp"
                android:background="@color/black_console"
                android:layout_marginStart="10dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/twelve"/>


            <TextView
                android:id="@+id/fourteen"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/exemple_table4"
                android:textColor="@color/white"
                android:layout_marginStart="50dp"
                android:layout_marginTop="-245dp"
                android:layout_marginEnd="30sp"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/thirteen"/>

            <TextView
                android:id="@+id/fiveteen"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="20dp"
                android:fontFamily="@font/mplcbold"
                android:text="@string/html_td"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fourteen" />

            <View
                android:id="@+id/sixteen"
                android:layout_width="0dp"
                android:layout_height="270sp"
                android:background="@color/black_console"
                android:layout_marginStart="10dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fiveteen"/>

            <TextView
                android:id="@+id/seventeen"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/exemple_table5"
                android:textColor="@color/white"
                android:layout_marginStart="50dp"
                android:layout_marginTop="-265dp"
                android:layout_marginEnd="30sp"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sixteen"/>

            <TextView
                android:id="@+id/eighteen"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="20dp"
                android:fontFamily="@font/mplcbold"
                android:text="@string/html_caption"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/seventeen"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.appcompat.widget.LinearLayoutCompat>