<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <ImageView
                android:id="@+id/chapter1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:src="@drawable/circul_button1"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="60sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:textSize="32sp"
                android:fontFamily="@font/racing_sans_one"
                app:layout_constraintTop_toTopOf="@id/chapter1"
                app:layout_constraintLeft_toLeftOf="@id/chapter1"
                app:layout_constraintRight_toRightOf="@id/chapter1"
                android:layout_margin="30sp"/>


            <Button
                android:id="@+id/chapterBtn1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/chapter1"
                android:textColor="@color/black"
                android:background="@android:color/transparent"
                android:textSize="16sp"
                android:paddingLeft="0dp"
                android:layout_marginStart="8sp"
                app:layout_constraintLeft_toRightOf="@id/chapter1"
                app:layout_constraintBottom_toBottomOf="@id/chapter1" />


            <ImageView
                android:id="@+id/chapter2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:src="@drawable/circule_button2"
                app:layout_constraintTop_toBottomOf="@+id/chapter1"
                android:layout_margin="20sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="&lt;/&gt;"
                android:textColor="@color/white"
                android:textSize="70sp"
                android:fontFamily="@font/racing_sans_one"
                app:layout_constraintTop_toTopOf="@id/chapter2"
                app:layout_constraintLeft_toLeftOf="@id/chapter2"
                app:layout_constraintRight_toRightOf="@id/chapter2"
                android:layout_margin="5sp"/>

            <Button
                android:id="@+id/chapterBtn2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/chapter2"
                android:textColor="@color/black"
                android:background="@android:color/transparent"
                android:textSize="16sp"
                android:paddingLeft="1dp"
                android:layout_marginStart="8sp"
                app:layout_constraintLeft_toRightOf="@id/chapter2"
                app:layout_constraintBottom_toBottomOf="@id/chapter2" />

            <ImageView
                android:id="@+id/chapter3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/circule_button3"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="300sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/code"
                android:textColor="@color/white"
                android:textSize="40sp"
                android:fontFamily="@font/racing_sans_one"
                app:layout_constraintTop_toTopOf="@id/chapter3"
                app:layout_constraintLeft_toLeftOf="@id/chapter3"
                app:layout_constraintRight_toRightOf="@id/chapter3"
                android:layout_margin="15sp"/>

            <Button
                android:id="@+id/chapterBtn3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/chapter3"
                android:textColor="@color/black"
                android:background="@android:color/transparent"
                android:textSize="16sp"
                android:paddingLeft="1dp"
                android:layout_marginStart="8sp"
                app:layout_constraintLeft_toRightOf="@id/chapter3"
                app:layout_constraintBottom_toBottomOf="@id/chapter3" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.appcompat.widget.LinearLayoutCompat>
